@@ -180,11 +180,6 @@ enum {
     F_GAMMA,	
     F_LNGAMMA,
     F_DIGAMMA,
-    F_PNOBS,
-    F_PMIN,
-    F_PMAX,
-    F_PMEAN,
-    F_PSD,
     F_IMAT,
     F_SUMR,
     F_SUMC,
@@ -318,6 +313,11 @@ enum {
     F_ISCONST,
     F_INBUNDLE,
     F_COLNAME,
+    F_PNOBS,
+    F_PMIN,
+    F_PMAX,
+    F_PMEAN,
+    F_PSD,
     F2_MAX,	  /* SEPARATOR: end of two-arg functions */
     F_BFGSMAX,
     F_MSHAPE,
